force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Full Name (Last Name, First Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>