force-app/main/default/objects/Employee__c/fields/Contract_Ends__c.field-meta.xml
<CustomField>
    <fullName>Contract_Ends__c</fullName>
    <label>Contract Ends</label>
    <type>Date</type>
</CustomField>