force-app/main/default/objects/Employee__c/fields/Home_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Home_Postcode__c</fullName>
    <label>Home Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>