force-app/main/default/objects/Employee__c/fields/Length_of_Probation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Probation__c</fullName>
    <label>Length of Probation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>