force-app/main/default/objects/Employee__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>married</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>