force-app/main/default/objects/Employee__c/fields/Private_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Private_Mobile__c</fullName>
    <label>Private Mobile</label>
    <type>Phone</type>
</CustomField>