force-app/main/default/objects/Employee__c/fields/Time_and_Material__c.field-meta.xml
<CustomField>
    <fullName>Time_and_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time and Material</label>
    <type>Checkbox</type>
</CustomField>