force-app/main/default/objects/Employee__c/fields/Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days__c</fullName>
    <label>Vacation Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>