force-app/main/default/objects/Employee__c/fields/Vacation_Days_Year_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days_Year_to_Date__c</fullName>
    <formula>FLOOR(Location__r.Vacation_Days_per_Year__c / 365 * DAYOFYEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Days Year to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>