force-app/main/default/objects/Employee__c/fields/Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hours__c</fullName>
    <formula>Location__r.Target_Working_Hours_Per_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>