force-app/main/default/objects/Employee__c/fields/Works_Since__c.field-meta.xml
<CustomField>
    <fullName>Works_Since__c</fullName>
    <label>Works Since</label>
    <type>Date</type>
</CustomField>